syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.amsidh.mvc.service";
import "model/module.proto";

service BankService{
  //BiDirectional Streaming
  rpc transferFund(stream FundTransferRequest) returns (stream FundTransferResponse);
}
